--- a/course.html
+++ b/course.html
@@ -1,65 +1,4 @@
-<html>
-<head>
-  <meta http-equiv="content-type" content="text/html; charset=iso-8859-1">
-  <title>Teaching</title>
-  <link rel="stylesheet" type="text/css" media="screen" href="style.css">
-</head>
+---
+layout: default
+---
 
-<body>
-<p style="text-align:center;margin-left:0pt;margin-right:150pt;"><img alt="be"
-src="header.png" width="300" height="250"> </p>
-
-<div id="container">
-
-<div id="linkList">
-
-<div id="linkList2">
-
-<div id="lselect">
-<ul>
-  <li><a href="index.html"><span
-    style="font-size: 9pt;font-family: Times New Roman,Times,serif">Home</span></a></li>
-  <li><a href="AcExp.html"><span
-    style="font-size:9pt;font-family: Times New Roman,Times,serif">Academic
-    Expriences</span></a></li>
-  <li><a href="course.html"><span
-    style="font-size: 9pt;font-family: Times New Roman,Times,serif">Teaching</span></a></li>
-  <li><a href="Mahdieh_CV.pdf"><span
-    style="font-size: 9pt;font-family: Times New Roman,Times,serif">Curriculum
-    Vitae</span></a></li>
-</ul>
-</div>
-</div>
-</div>
-
-<div id="supportingText">
-
-<div id="explanation">
-<p style="margin-left:7em"><span
-style="font-size:14pt; font-family:Georgia, serif; color:#F75009; font-weight:bold; ">Spring
-2013:</span> </p>
-
-<p style="margin-left:12em"><a
-href="https://sites.google.com/site/cscabbasi/courses/icpc"><span
-style="font-family: Times New Roman,Times,serif"><span
-style="font-size: 11pt">programming Language in C</span></span></a></p>
-
-<p style="margin-left:12em"><a
-href="https://sites.google.com/site/cscabbasi/courses/mir"><spanstyle="font-family:
-Times New Roman,Times,serif"><span
-style="font-size: 11pt;font-family: Times New Roman,Times,serif">Modern
-Information Retrieval</span></a></p>
-
-<p style="margin-left:7em"><span
-style="font-family: Times New Roman,Times,serif"><span
-style="font-size:14pt; font-family:Georgia, serif; color:#F75009; font-weight:bold; ">Summer
-2013:</span> </span></p>
-
-<p style="margin-left:12em"><a href="teaching.html"><span
-style="font-family: Times New Roman,Times,serif;font-size: 11pt">programming
-Language in C</span></a></p>
-</div>
-</div>
-</div>
-</body>
-</html>
