--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
-<!DOCTYPE html>
-
-    <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
-  </head>
+<html>
+<head>
+  <meta http-equiv="content-type" content="text/html; charset=iso-8859-1">
+  <title>Mahdieh Abbasi</title>
+  <link rel="stylesheet" type="text/css" media="screen" href="/_sass/jekyll-theme-minimal.scss">
+</head>
   <body>
     <div class="wrapper">
     
