--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=iso-8859-1">
   <title>Mahdieh Abbasi</title>
-  <link rel="stylesheet" type="text/css" media="screen" href="/_sass/jekyll-theme-minimal.scss">
+  <link rel="stylesheet" type="text/css" media="screen" href="style.css">
 </head>
   <body>
     <div class="wrapper">
