--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 ---
 layout: default
 ---
-      <section>
+      <!--<section>-->
 
       
 <h1 id="bio">Bio</h1>
@@ -128,11 +128,12 @@ M. Abbasi, H. R. Rabiee, and C. Gagné. &quot;Monocular 3D Human Pose Estimation
 </div>
 </div>
 
+<!--
       </section>
   </div>
 
   </body>
-</html>
+</html>-->
 
 
 
