--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
           <li><a href="./index.html"><span
             style="font-size: 20pt;font-family: Times New Roman,Times,serif">Home</span></a></li>
           
-          <li><a href="./Mahdieh_CV.pdf"><span
+          <!--<li><a href="./Mahdieh_CV.pdf"><span
             style="font-size: 20pt;font-family: Times New Roman,Times,serif">Curriculum
-            Vitae</span></a></li>
+            Vitae</span></a></li>-->
           <li><a href="/Blog.html"><span
             style="font-size: 20pt;font-family: Times New Roman,Times,serif">Blog</span></a></li>
           <li><a href="https://sites.google.com/site/cscabbasi/courses"><span
@@ -42,7 +42,10 @@
 
       
 <h1 id="bio">Bio</h1>
-<p>I am a last-year P.h.D student at <a href="https://www.gelgif.ulaval.ca/accueil/">Electrical and Computer Engineering Department</a> of <a href="https://www.ulaval.ca/en/">Universite Laval</a>(UL) under supervision of <a href="http://vision.gel.ulaval.ca/~cgagne/">Christian Gagne</a> and <a href="http://vision.gel.ulaval.ca/~laurend/">Denis Laurendeau</a>. My current research revolves around dependeble and secure learning models to adversarial examples and Out-of-Distribution samples. Before joining UL, I was a researcher master student at <a href="http://dml.ir/">Digitial Media Lab</a> of <a href="http://www.en.sharif.edu/">Sharif University of Technology</a>, working on <a href="https://ieeexplore.ieee.org/document/7335521/">3D human pose estimation</a> under supervision <a href="http://sharif.edu/~rabiee/">H. Reza. Rabiee</a>.</p>
+<p>I am a last-year P.h.D student at <a href="https://www.gelgif.ulaval.ca/accueil/">Electrical and Computer Engineering Department</a> 
+  of <a href="https://www.ulaval.ca/en/">Universite Laval</a>(UL) under supervision of <a href="http://vision.gel.ulaval.ca/~cgagne/">Christian Gagne</a> and <a href="http://vision.gel.ulaval.ca/~laurend/">Denis Laurendeau</a>. My current research revolves around dependeble and secure learning models to adversarial examples and Out-of-Distribution samples. Before joining UL, I was a researcher master student at <a href="http://dml.ir/">Digitial Media Lab</a> of <a href="http://www.en.sharif.edu/">Sharif University of Technology</a>, working on <a href="https://ieeexplore.ieee.org/document/7335521/">3D human pose estimation</a> under supervision <a href="http://sharif.edu/~rabiee/">H. Reza. Rabiee</a>.
+  
+        </p>
 <h1 id="my-research-interests">My Research Interests</h1>
 <ul>
 <li>Dependable and Secure Deep Neural Networks</li>
