--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <img width="250" height="200" style="vertical-align:middle" src="/images/Our_proposal.jpg"/>
 </div>
 <div class="text">
-M. Abbasi, D. Laurandeau, C. Gagné, &quot;Self-supervised Robust Object Detectors from Partially Labelled Datasets&quot;, Arxiv Preprint, 2020. <span style="font-weight: bold"><a href="https://arxiv.org/abs/2005.11549">[PDF]</a>, <a href="">[Code]</a></span>.
+M. Abbasi, D. Laurandeau, C. Gagné, &quot;Self-supervised Robust Object Detectors from Partially Labelled Datasets&quot;, Arxiv Preprint, 2020. <span style="font-weight: bold"><a href="https://arxiv.org/abs/2005.11549">[PDF]</a><a href="">[Code]</a></span>.
 </div>
 </div>
 <div class="parent">
@@ -68,7 +68,7 @@ M. Abbasi, D. Laurandeau, C. Gagné, &quot;Self-supervised Robust Object Detecto
 <img width="250" height="200" style="vertical-align:middle" src="/images/Ensemble.jpg"/>
 </div>
 <div class="text">
-<p>M. Abbasi, A. Rajabi, C. Gagné, R. Bobba, “Toward Adversarial Robustness by Diversity in an Ensemble of Specialized Deep Neural Networks”, Long paper in Canadian Conference on AI, 2020 (<a href="https://www.caiac.ca/en/conferences/canadianai-2020/home"><span style="color: red">Best paper award</span></a>). <span style="font-weight: bold"><a href="https://arxiv.org/pdf/2005.08321.pdf">[PDF]</a>, <a href="https://youtu.be/qFrkUeBjTMA">[Talk]</a> <a href="">[Code]</a></span>.</p>
+<p>M. Abbasi, A. Rajabi, C. Gagné, R. Bobba, “Toward Adversarial Robustness by Diversity in an Ensemble of Specialized Deep Neural Networks”, Long paper in Canadian Conference on AI, 2020 (<a href="https://www.caiac.ca/en/conferences/canadianai-2020/home"><span style="color: red">Best paper award</span></a>). <span style="font-weight: bold"><a href="https://arxiv.org/pdf/2005.08321.pdf">[PDF]</a><a href="https://youtu.be/qFrkUeBjTMA">[Talk]</a> <a href="">[Code]</a></span>.</p>
 </div>
 </div>
 <div class="parent">
