--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ M. Abbasi, and C. Gagné. &quot;Robustness to Adversarial Examples through an En
 </div>
 <div class="parent">
 <div class="img">
-<img width="50" height="50" style="vertical-align:middle" src="/images/ADMM.jpg" />
+<img style="vertical-align:middle" src="/images/ADMM.jpg" />
 </div>
 <div class="text">
 F. Kiaee, C. Gagné, M.Abbasi, &quot;Alternating Direction Method of Multipliers for Sparse Convolutional Neural Networks.&quot;, Arxiv Preprint, 2017
