--- a/Blog.html
+++ b/Blog.html
@@ -2,4 +2,4 @@
 layout: default
 ---
 
-* Inreseting blogs are :
+*  [# Performance degradation of a SOTA object detecor trained on a dataset with missing-labels]
