--- a/Blog.html
+++ b/Blog.html
@@ -2,4 +2,4 @@
 layout: default
 ---
 
-*  [# Performance degradation of a SOTA object detecor trained on a dataset with missing-labels](/Blogs/Object_Detector.html)
+<a href="/Blogs/Object_Detector.html"> <span style="font-weight: bold">Performance degradation of a SOTA object detecor trained on a dataset with missing-labels</a>
