--- a/Blog.html
+++ b/Blog.html
@@ -1,5 +1,10 @@
 ---
 layout: default
 ---
-
+<section>
+<ul>
+  <li>
 <a href="/Blogs/Object_Detector.html"> <span style="font-weight: bold">Performance degradation of a SOTA object detecor trained on a dataset with missing-labels</a>
+  </li>
+</ul>
+  </section>
