--- a/Blog.html
+++ b/Blog.html
@@ -5,6 +5,7 @@ layout: default
 
 <title>Blog</title>
 <section>
+  <h1> Blog</h1>
 <ul>
   <li>
 <a href="/Blogs/Object_Detector.html"> <span style="font-weight: bold">Performance degradation of a SOTA object detecor trained on a dataset with missing-labels</a>
