--- a/Blog.html
+++ b/Blog.html
@@ -7,7 +7,7 @@ layout: default
   <title> Blog Posts</title>
   </head>
 <section>
-  <h1> Blog</h1>
+  <h1> Blog Posts</h1>
 <ul>
   <li>
 <a href="/Blogs/Object_Detector.html"> <span style="font-weight: bold">Performance degradation of a SOTA object detecor trained on a dataset with missing-labels</a>
