--- a/Blogs/Object_Detector.html
+++ b/Blogs/Object_Detector.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html>
+  
+  
+
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
+  <meta http-equiv="content-type" content="text/html; charset=iso-8859-1">
+  
+   <link rel="stylesheet" type="text/css" media="screen" href="style.css">
   <title>MathJax example</title>
   <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
   <script id="MathJax-script" async
