--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ M. Abbasi, D. Laurandeau, C. Gagné, &quot;Self-supervised Robust Object Detecto
 <img width="250" height="200" style="vertical-align:middle" src="/images/Ensemble.jpg"/>
 </div>
 <div class="text">
-<p>M. Abbasi, A. Rajabi, C. Gagné, R. Bobba, “Toward Adversarial Robustness by Diversity in an Ensemble of Specialized Deep Neural Networks”, Long paper in Canadian Conference on AI, 2020 (<a href="https://www.caiac.ca/en/conferences/canadianai-2020/home"><span style="color: red">Best paper award</span></a>). <span style="font-weight: bold"><a href="https://arxiv.org/pdf/2005.08321.pdf">[PDF]</a><a href="https://youtu.be/qFrkUeBjTMA">[Talk]</a> <a href="">[Code]</a></span>.</p>
+<p>M. Abbasi, A. Rajabi, C. Gagné, R. Bobba, &quot;Toward Adversarial Robustness by Diversity in an Ensemble of Specialized Deep Neural Networks&quot;, Long paper in Canadian Conference on AI, 2020 (<a href="https://www.caiac.ca/en/conferences/canadianai-2020/home"><span style="color: red">Best paper award</span></a>). <span style="font-weight: bold"><a href="https://arxiv.org/pdf/2005.08321.pdf">[PDF]</a><a href="https://youtu.be/qFrkUeBjTMA">[Talk]</a> <a href="">[Code]</a></span>.</p>
 </div>
 </div>
 <div class="parent">
@@ -85,7 +85,8 @@ M. Abbasi, D. Laurandeau, C. Gagné, &quot;Self-supervised Robust Object Detecto
 <img width="250" height="200" style="vertical-align:middle" src="/images/ECAI.jpg"/>
 </div>
 <div class="text">
-M. Abbasi, C. Shui, A. Rajabi, C. Gagné, R. Bobba, “Towards metrics for differentiating Out-of-Distribution sets”, NeurIPS Workshop on Safety and Robustness in Decision-Making, 2019, and accepted in ECAI, 2020 (Oral, Acceptance rate ~26%). <span style="font-weight: bold"><a href="https://arxiv.org/abs/1910.08650">[PDF]</a> <a href="">[Talk (coming soon)]</a><a href="">[Code]</a></span>.
+M. Abbasi, C. Shui, A. Rajabi, C. Gagné, R. Bobba, &quot;Towards metrics for differentiating Out-of-Distribution sets&quot;,
+  NeurIPS Workshop on Safety and Robustness in Decision-Making, 2019, and accepted in ECAI, 2020 (Oral). <span style="font-weight: bold"><a href="https://arxiv.org/abs/1910.08650">[PDF]</a> <a href="">[Talk (coming soon)]</a><a href="">[Code]</a></span>.
 </div>
 </div>
 <div class="parent">
@@ -93,7 +94,8 @@ M. Abbasi, C. Shui, A. Rajabi, C. Gagné, R. Bobba, “Towards metrics for diffe
 <img width="400" height="200" style="vertical-align:middle" src="/images/MTL.jpg" />
 </div>
 <div class="text">
-C. Shui, M. Abbasi, L.E. Robitaille, B. Wang, C. Gagné, &quot;A Principled Approach for Learning Task Similarity in Multitask Learning&quot;, International Joint Conference on Artificial Intelligence (IJCAI) 2019. (Poster, Acceptance rate ~18%). <span style="font-weight: bold"><a href="https://arxiv.org/abs/1903.09109">[PDF]</a> <a href="/Posters/2019_07___Deep_Multitask___IJCAI_Poster.pdf">[Poster]</a><a href="">[Code]</a></span>
+C. Shui, M. Abbasi, L.E. Robitaille, B. Wang, C. Gagné, &quot;A Principled Approach for Learning Task Similarity in Multitask Learning&quot;, 
+  International Joint Conference on Artificial Intelligence (IJCAI) 2019. <span style="font-weight: bold"><a href="https://arxiv.org/abs/1903.09109">[PDF]</a> <a href="/Posters/2019_07___Deep_Multitask___IJCAI_Poster.pdf">[Poster]</a><a href="">[Code]</a></span>
 </div>
 </div>
 <div class="parent">
@@ -137,7 +139,8 @@ F. Kiaee, C. Gagné, M.Abbasi, &quot;Alternating Direction Method of Multipliers
 <img width="300" height="200" style="vertical-align:middle" src="/images/3DV15.jpg" />
 </div>
 <div class="text">
-M. Abbasi, H. R. Rabiee, and C. Gagné. &quot;Monocular 3D Human Pose Estimation with a Semi-supervised Graph-based Method.&quot; International Conference on 3DVision, IEEE, 2015. [Oral, 15% acceptance rate for oral]
+M. Abbasi, H. R. Rabiee, and C. Gagné. &quot;Monocular 3D Human Pose Estimation with a Semi-supervised Graph-based Method.&quot;
+  International Conference on 3DVision, IEEE, 2015 (Oral).
   <span style="font-wieght: bold"><a href="https://ieeexplore.ieee.org/document/7335521/">[PDF]</a> <a href="/Posters/Poster.pdf">[Poster]</a></span>
 </div>
 </div>
