--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
 
         <h1> News</h1>
         <ul>
-          <li>[2020/8/28] Poster Presentation at Montreal AI Symposium 2020</li>
-          <li>[2020/8/28] Oral Presntation at ECAI 2020</li>
+          <li>[2020/8/28] Poster Presentation at <a href="http://montrealaisymposium.com/">Montreal AI Symposium 2020</a></li>
+          <li>[2020/8/28] Oral Presntation at <a href="http://ecai2020.eu/"ECAI 2020</a></li>
           
           
           </ul>
