--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <h1> News</h1>
         <ul>
           <li>[2020/8/28] Poster Presentation at <a href="http://montrealaisymposium.com/">Montreal AI Symposium 2020</a></li>
-          <li>[2020/8/28] Oral Presntation at <a href="http://ecai2020.eu/"ECAI 2020</a></li>
+          <li>[2020/8/28] Oral Presntation at <a href="http://ecai2020.eu/">ECAI 2020</a></li>
           
           
           </ul>
