--- a/Blogs/Object_Detector.html
+++ b/Blogs/Object_Detector.html
@@ -7,16 +7,18 @@
   <meta http-equiv="content-type" content="text/html; charset=iso-8859-1">
   
    <link rel="stylesheet" type="text/css" media="screen" href="style.css">
-  <title>MathJax example</title>
+  
   <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
   <script id="MathJax-script" async
           src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
   </script>
 </head>
+  
 <body>
 <p>
-  When \(a \ne 0\), there are two solutions to \(ax^2 + bx + c = 0\) and they are
-  \[x = {-b \pm \sqrt{b^2-4ac} \over 2a}.\]
+  
+  <!--When \(a \ne 0\), there are two solutions to \(ax^2 + bx + c = 0\) and they are
+  \[x = {-b \pm \sqrt{b^2-4ac} \over 2a}.\]-->
 </p>
 </body>
 </html>
