--- a/Blogs/Object_Detector.html
+++ b/Blogs/Object_Detector.html
@@ -15,10 +15,31 @@
 </head>
   
 <body>
+  <h1> Introduction</h1>
 <p>
+  
+  Modern CNN-based object detectors such as faster R-CNN and YOLO achieve remarkable performance when trained 
+  on fully labeled large-scale datasets, which include both instance-level annotations (\ie bounding boxes around each object of interest) 
+  and image-level labels (\ie category of the object enclosed in a bounding box) for all the Objects of Interest (OoIs). 
+  On the one hand, collecting a dataset with full annotations, specifically bounding boxes, can be a tedious and costly process.
+  On the other hand, the object detectors such as R-CNN and YOLO show that their performance is dependent on having access to such fully labeled datasets. 
+  In other words, training them on partially labelled datasets (\ie containing instances with missing-labels) leads to a drop in generalization performance ~\cite{wu2018soft,zhang2018weakly,wu2018soft}.
+
+
+  
   
   <!--When \(a \ne 0\), there are two solutions to \(ax^2 + bx + c = 0\) and they are
   \[x = {-b \pm \sqrt{b^2-4ac} \over 2a}.\]-->
 </p>
+  <p>Several scenarios can lead to a parially labelled datasets:
+    <ul>
+      <li>Unintentional error in labelling</li>
+      <li> partial annotation policy:To reduce annotation cost, "partial annotation policy" considers 
+        to annotate only one instance of each object presented in a given image. For example, in an image containing a herd of sheep, only one sheep is annotated, instead of fully annotating all the sheep instances in the image. This policy causes some missing bounding box
+        annotations but interestingly no missing image-level labels as at least one instance of each existing object in the given image is annotated.</li>
+         <li>Merged dataset</li>
+      </ul>
+  
+  
 </body>
 </html>
