--- a/Blogs/Object_Detector.html
+++ b/Blogs/Object_Detector.html
@@ -1,7 +1,5 @@
-<!DOCTYPE html>
+
 <html>
-  
-  
 
 <head>
   <meta http-equiv="content-type" content="text/html; charset=iso-8859-1">
@@ -31,7 +29,8 @@
   <!--When \(a \ne 0\), there are two solutions to \(ax^2 + bx + c = 0\) and they are
   \[x = {-b \pm \sqrt{b^2-4ac} \over 2a}.\]-->
 </p>
-  <p>Several scenarios can lead to a parially labelled datasets:
+  
+    Several scenarios can lead to a parially labelled datasets:
     <ul>
       <li>Unintentional error in labelling</li>
       <li> partial annotation policy:To reduce annotation cost, "partial annotation policy" considers 
