--- a/Blogs/Object_Detector.html
+++ b/Blogs/Object_Detector.html
@@ -13,6 +13,8 @@
 </head>
   
 <body>
+  <div class="wrapper">
+    <section>
   <h1> Introduction</h1>
 <p>
   
@@ -38,7 +40,8 @@
         annotations but interestingly no missing image-level labels as at least one instance of each existing object in the given image is annotated.</li>
          <li>Merged dataset</li>
       </ul>
-  
+    </section>
+  </div>
   
 </body>
 </html>
