--- a/Blogs/Object_Detector.html
+++ b/Blogs/Object_Detector.html
@@ -37,7 +37,7 @@
             style="font-size: 20pt;font-family: Times New Roman,Times,serif">Publications</span></a></li>
           
           
-          <li><a href="/Blog.html"><span
+          <li><a href="./Blog.html"><span
             style="font-size: 20pt;font-family: Times New Roman,Times,serif">Blog</span></a></li>
           <li><a href="https://sites.google.com/site/cscabbasi/courses"><span
             style="font-size:20pt;font-family: Times New Roman,Times,serif">Teaching</span></a></li>
