--- a/Blogs/Object_Detector.html
+++ b/Blogs/Object_Detector.html
@@ -61,7 +61,7 @@
   and image-level labels (\ie category of the object enclosed in a bounding box) for all the Objects of Interest (OoIs). 
   On the one hand, collecting a dataset with full annotations, specifically bounding boxes, can be a tedious and costly process.
   On the other hand, the object detectors such as R-CNN and YOLO show that their performance is dependent on having access to such fully labeled datasets. 
-  In other words, training them on partially labelled datasets (\ie containing instances with missing-labels) leads to a drop in generalization performance ~\cite{wu2018soft,zhang2018weakly,wu2018soft}.
+  In other words, training them on partially labelled datasets (\ie containing instances with missing-labels) leads to a drop in generalization performance.
 
 
   
@@ -72,12 +72,19 @@
   
     Several scenarios can lead to a parially labelled datasets:
     <ul>
-      <li>Unintentional error in labelling</li>
-      <li> partial annotation policy:To reduce annotation cost, "partial annotation policy" considers 
+      <li><span style="font_weight: bold">Unintentional error in labelling</span></li>
+      <li> <span style="font_weight: bold">Partial annotation policy </span>:To reduce annotation cost, "partial annotation policy" considers 
         to annotate only one instance of each object presented in a given image. For example, in an image containing a herd of sheep, only one sheep is annotated, instead of fully annotating all the sheep instances in the image. This policy causes some missing bounding box
         annotations but interestingly no missing image-level labels as at least one instance of each existing object in the given image is annotated.</li>
-         <li>Merged dataset</li>
+      <li><span style="font_weight: bold">Merged dataset</span>  we aim at combining several datasets from similar (or the same) contexts but with disjoint 
+        (or partially disjoint) sets of Objects of Interest (OoI), in order to <span style="font_weight: bold">efficiently</span> construct a larger dataset that
+        includes a wider range of objects of interest. For instance, Kitti and German Traffic Signs are
+        two different datasets with two disjoint sets of OoIs that could be merged to cover a wider spectrum of objects appearing on roads. Furthermore,
+        merging the datasets that include the object of interest from across different domains --\ie the objects appeared in different poses, illuminations, styles, 
+        etc-- have the potential to also mitigate the domain-shift challenge.</li>
+      
       </ul>
+      
     </section>
   </div>
   
