--- a/Blogs/Object_Detector.html
+++ b/Blogs/Object_Detector.html
@@ -81,7 +81,8 @@
         includes a wider range of objects of interest. For instance, Kitti and German Traffic Signs are
         two different datasets with two disjoint sets of OoIs that could be merged to cover a wider spectrum of objects appearing on roads. Furthermore,
         merging the datasets that include the object of interest from across different domains --\ie the objects appeared in different poses, illuminations, styles, 
-        etc-- have the potential to also mitigate the domain-shift challenge.</li>
+        etc-- have the potential to also mitigate the domain-shift challenge. <span style="font_weight: bold; color: blue">To read more about merged datasets, interested readers can 
+        read our <a href=""> article </a></li>
       
       </ul>
       
