--- a/Blogs/Object_Detector.html
+++ b/Blogs/Object_Detector.html
@@ -57,9 +57,8 @@
 <p>
   
   Modern CNN-based object detectors such as faster R-CNN and YOLO achieve remarkable performance when trained 
-  on fully labeled large-scale datasets, which include both instance-level annotations (\ie bounding boxes around each object of interest) 
-  and image-level labels (\ie category of the object enclosed in a bounding box) for all the Objects of Interest (OoIs). 
-  On the one hand, collecting a dataset with full annotations, specifically bounding boxes, can be a tedious and costly process.
+  on fully labeled large-scale datasets. 
+  On the one hand, collecting a dataset with full annotations, specifically bounding boxes around Objects of Interest (OoI), can be a tedious and costly process.
   On the other hand, the object detectors such as R-CNN and YOLO show that their performance is dependent on having access to such fully labeled datasets. 
   In other words, training them on partially labelled datasets (\ie containing instances with missing-labels) leads to a drop in generalization performance.
 
