--- a/publications.html
+++ b/publications.html
@@ -63,7 +63,7 @@ M. Abbasi, A. Rajabi, A.S. Mozafari, R.B. Bobba, C. Gagné, &quot;Controlling Ov
 </div>
 <div class="text">
 M. Abbasi, and C. Gagné. &quot;Robustness to Adversarial Examples through an Ensemble of Specialists.&quot; International Conference on Learning Representations (ICLR) Workshop, 2017.
-  <span style="font-wieght: bold"><a href="https://arxiv.org/pdf/1702.06856.pdf">[PDF]</a> <a href="/Posters/ICLR17.pdf">[Poster]</a></span>
+  <b><a href="https://arxiv.org/pdf/1702.06856.pdf">[PDF]</a> <a href="/Posters/ICLR17.pdf">[Poster]</a></b>
 </div>
 </div>
 <div class="parent">
@@ -72,7 +72,7 @@ M. Abbasi, and C. Gagné. &quot;Robustness to Adversarial Examples through an En
 </div>
 <div class="text">
 F. Kiaee, C. Gagné, M.Abbasi, &quot;Alternating Direction Method of Multipliers for Sparse Convolutional Neural Networks.&quot;, Arxiv Preprint, 2017
-  <span style="font-weight: bold"><a href="https://arxiv.org/abs/1611.01590">[PDF]</a>
+  <b><a href="https://arxiv.org/abs/1611.01590">[PDF]</a></b>
 </div>
 </div>
 <div class="parent">
@@ -82,7 +82,7 @@ F. Kiaee, C. Gagné, M.Abbasi, &quot;Alternating Direction Method of Multipliers
 <div class="text">
 M. Abbasi, H. R. Rabiee, and C. Gagné. &quot;Monocular 3D Human Pose Estimation with a Semi-supervised Graph-based Method.&quot;
   International Conference on 3DVision, IEEE, 2015 (Oral).
-  <span style="font-wieght: bold"><a href="https://ieeexplore.ieee.org/document/7335521/">[PDF]</a> <a href="/Posters/Poster.pdf">[Poster]</a></span>
+  <b><a href="https://ieeexplore.ieee.org/document/7335521/">[PDF]</a> <a href="/Posters/Poster.pdf">[Poster]</a></b>
 </div>
 </div>
 
