--- a/Blogs/Object_Detector.html
+++ b/Blogs/Object_Detector.html
@@ -70,7 +70,7 @@
   \[x = {-b \pm \sqrt{b^2-4ac} \over 2a}.\]-->
 </p>
   
-    Several scenarios can lead to a parially labelled datasets:
+    Several scenarios can lead to a parially labelled dataset:
     <ul>
       <li><b>Unintentional error in labelling</b></li>
       <li> <b>Partial annotation policy </b>:To reduce annotation cost, "partial annotation policy" considers 
