--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
 <head>
   <meta http-equiv="content-type" content="text/html; charset=iso-8859-1">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mahdieh Abbasi</title>
   <link rel="stylesheet" type="text/css" media="screen" href="style.css">
 </head>
