--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 
 <html>
 <head>
-  <meta http-equiv="content-type" content="text/html; charset=iso-8859-1">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Mahdieh Abbasi</title>
   <link rel="stylesheet" type="text/css" media="screen" href="style.css">
 </head>
