--- a/publications.html
+++ b/publications.html
@@ -10,7 +10,7 @@ layout: default
 <img width="100" height="100" style="vertical-align:middle" src="/images/Our_proposal.jpg"/>
 </div>
 <div class="text">
-M. Abbasi, D. Laurandeau, C. Gagné, &quot;Self-supervised Robust Object Detectors from Partially Labelled Datasets&quot;, Arxiv Preprint, 2020. <span style="font-weight: bold"><a href="https://arxiv.org/abs/2005.11549">[PDF]</a><a href="">[Code]</a></span>.
+M. Abbasi, D. Laurendeau, C. Gagné, &quot;Self-supervised Robust Object Detectors from Partially Labelled Datasets&quot;, Arxiv Preprint, 2020. <span style="font-weight: bold"><a href="https://arxiv.org/abs/2005.11549">[PDF]</a><a href="">[Code]</a></span>.
 </div>
 </div>
 <div class="parent">
