--- a/index.html
+++ b/index.html
@@ -57,8 +57,10 @@ layout: default
       
 <h1 id="bio">Bio</h1>
 <p>I am a last-year Ph.D. student in <a href="https://www.gelgif.ulaval.ca/accueil/">Electrical and Computer Engineering Department</a> 
-  at <a href="https://www.ulaval.ca/en/">Universite Laval</a> (UL) working under supervision of 
-  <a href="http://vision.gel.ulaval.ca/~cgagne/">Christian Gagne</a> and <a href="http://vision.gel.ulaval.ca/~laurend/">Denis Laurendeau</a>. My current research revolves around dependeble and secure learning models to adversarial examples and Out-of-Distribution samples. Before joining UL, I was a researcher master student at <a href="http://dml.ir/">Digitial Media Lab</a> of <a href="http://www.en.sharif.edu/">Sharif University of Technology</a>(SUT), working on <a href="https://ieeexplore.ieee.org/document/7335521/">3D human pose estimation</a> under supervision <a href="http://sharif.edu/~rabiee/">H. Reza. Rabiee</a>. I obtained my Bachelor of Science in Computer Science from SUT. As my BSc project, I studied and investigated the community detection algorithms for detecting communities of Iranian Mathematicians around the globe.  
+  at <a href="https://www.ulaval.ca/en/">Universite Laval</a> (UL) researching under supervision of 
+  <a href="http://vision.gel.ulaval.ca/~cgagne/">Christian Gagne</a> (the director of <a href="https://iid.ulaval.ca/en/">Insitute Intelligence and Data</a>
+  and a <a href="https://mila.quebec/en/">MILA's</a> professor) and <a href="http://vision.gel.ulaval.ca/~laurend/">Denis Laurendeau</a>
+  (the director of <a href="http://vision.gel.ulaval.ca/en/">Computer Vision and System Lab </a>). My current research revolves around dependeble and secure learning models to adversarial examples and Out-of-Distribution samples. Before joining UL, I was a researcher master student at <a href="http://dml.ir/">Digitial Media Lab</a> of <a href="http://www.en.sharif.edu/">Sharif University of Technology</a>(SUT), working on <a href="https://ieeexplore.ieee.org/document/7335521/">3D human pose estimation</a> under supervision <a href="http://sharif.edu/~rabiee/">H. Reza. Rabiee</a>. I obtained my Bachelor of Science in Computer Science from SUT. As my BSc project, I studied and investigated the community detection algorithms for detecting communities of Iranian Mathematicians around the globe.  
   
         </p>
 <h1 id="my-research-interests">My Research Interests</h1>
