--- a/publications.html
+++ b/publications.html
@@ -27,7 +27,7 @@ M. Abbasi, D. Laurendeau, C. Gagné, &quot;Self-supervised Robust Object Detecto
 </div>
 <div class="text">
 M. Abbasi, C. Shui, A. Rajabi, C. Gagné, R. Bobba, &quot;Towards metrics for differentiating Out-of-Distribution sets&quot;,
-  NeurIPS Workshop on Safety and Robustness in Decision-Making, 2019, and accepted in ECAI, 2020 (Oral). <span style="font-weight: bold"><a href="https://arxiv.org/abs/1910.08650">[PDF]</a> <a href="">[Talk (coming soon)]</a><a href="">[Code]</a></span>.
+  NeurIPS Workshop on Safety and Robustness in Decision-Making, 2019, and accepted in ECAI, 2020 (Oral). <span style="font-weight: bold"><a href="https://arxiv.org/abs/1910.08650">[PDF]</a> <a href="">[Talk (coming soon)]</a><a href="/Posters/2020_08_ECAI_Presentation.pdf">[Presentation]</a><a href="https://github.com/mahdaneh/OOD_set_Metrics">[Code]</a></span>.
 </div>
 </div>
 <div class="parent">
