--- a/Blog.html
+++ b/Blog.html
@@ -11,6 +11,10 @@ layout: default
 <ul>
   <li>
 <a href="/Blogs/Object_Detector.html"> <span style="font-weight: bold">Performance degradation of a SOTA object detecor trained on a dataset with missing-labels</a>
+  
+  </li>
+    <li>
+      <a href="/Blogs/Data_anonymization_privacy.html"><b>Anonymized Synthetic Data Generation for Privacy-preserving purposes</b></a>
   </li>
 </ul>
   </section>
