update blog on dataprivacy

--- a/Blogs/Data_anonymization_privacy.html
+++ b/Blogs/Data_anonymization_privacy.html
@@ -5,18 +5,17 @@ layout: default
 
 
     <section>
-      <h1>Anonymized Synthetic Data Generation</h1>
-  <h2> Introduction</h2>
+      <h1>Anonymized Synthetic Data Generation by DP-GAN</h1>
+
+  <h2> Why to generate synthetic data to preserve data privacy?</h2>
   
 <p>
-  
-  
-
-  
  Many industries from insurance companies to financial institutions to care-providing agencies have access to an ocean of information that can be used for making more informed decisions and recognizing new strategies and policies among others, which not only results in an increase in their profits but also enhance the quality of their services, resulting in customers satisfaction. Machine learning and data mining techniques can effectively extract some data-driven insights from such tremendously large and rich datasets if they can be shared with the trusted research institutions or their research partners.
 However, these datasets can not be shared simply since such datasets usually contain an enormous amount of sensitive and personal information, which can drastically threaten the privacy of the customers.
 Therefore, before sharing these sensitive data with the third-party research institutions, the holders of these datasets have to guarantee and preserve the privacy of their customers' information. Data anonymization is one of the ways for preserving data privacy as it aims to make de-identification attacks very hard or preferably impossible. In meantime, the anonymized data should preserve the statistical properties and the existing patterns of the original unprotected data so that it allows the machine learning techniques to extract and learn these patterns for a variety of tasks, such as predictive models. This leads us to a dilemma; <b>privacy v.s. utility</b>.
+</p>
 
+<p>
 
 To address both these criteria (privacy v.s. utility), one requires to generate <b>synthetic anonymized data</b> that I) pertains the statistical properties of the original data (measured by a utility metric) while II) preserving the privacy of customers information (which can be quantified by a privacy metric).
 To create such synthetic anonymized data, one can either <b>fully or partially synthetic data</b>. In the former,
@@ -24,7 +23,7 @@ all the features (attributes) of a given dataset are considered as sensitive dat
 synthetic data records to be used instead of the original data records.
 While in the latter, regarding some features as sensitive, the analysts tend to either synthesize values for these attributes
 or censor them without hurting the utility while keeping the privacy risk, e.g. identity disclosure, low.
-</p>
+
 </p>
   
     
