update blog data-privacy

--- a/Blogs/Data_anonymization_privacy.html
+++ b/Blogs/Data_anonymization_privacy.html
@@ -7,13 +7,17 @@ layout: default
     <section>
       <h1>Anonymized Synthetic Data Generation by DP-GAN</h1>
 
-  <h2> Why to generate synthetic data to preserve data privacy?</h2>
+<img width="100" height="100" style="vertical-align:middle" src="/Blogs/icon_image.png"/>
+
+  <h2> Why to generate synthetic data?</h2>
   
 <p>
- Many industries from insurance companies to financial institutions to care-providing agencies have access to an ocean of information that can be used for making more informed decisions and recognizing new strategies and policies to not only increase their profits but also enhance the quality of their services, resulting in customers satisfaction. Machine learning and data mining techniques can effectively extract some data-driven insights from such tremendously large and rich datasets if they can be shared with the trusted research institutions or their research partners.
+ Many industries from insurance companies to financial institutions to care-providing agencies have access to an ocean of information that can be used for making more informed decisions and recognizing new strategies and policies to not only increase their profits but also enhance the quality of their services, resulting in customers satisfaction. Machine learning and data mining techniques can effectively extract some data-driven insights from such tremendously large and rich datasets if they can be shared with the trusted research institutions.
 However, these datasets can not be shared simply since such datasets usually contain an enormous amount of sensitive and personal information, which can drastically threaten the privacy of the customers.
-Therefore, before sharing these sensitive data with the third-party research institutions, the holders of these datasets have to guarantee and preserve the privacy of their customers' information. Data anonymization is one of the ways for preserving data privacy as it aims to make de-identification attacks very hard or preferably impossible. In meantime, the anonymized data should preserve the statistical properties and the existing patterns of the original unprotected data so that it allows the machine learning techniques to extract and learn these patterns for a variety of tasks, such as predictive models. This leads us to a dilemma; <b>privacy v.s. utility</b>.
+Therefore, before sharing these sensitive data with the third-party research institutions, the holders of these datasets have to guarantee and preserve the privacy of their customers' information. Data anonymization is one of the ways for preserving data privacy as it aims to make de-identification attacks very hard or preferably impossible. In meantime, the anonymized data should preserve the statistical properties and the patterns existed in the original but unprotected data in order to allows the machine learning techniques to extract and learn these patterns for a variety of tasks, such as predictive models. This leads us to a dilemma; <b>privacy v.s. utility</b>.
 </p>
+
+<img ></img>
 
 <p>
 
