blog data privacy

--- a/Blogs/Data_anonymization_privacy.html
+++ b/Blogs/Data_anonymization_privacy.html
@@ -5,9 +5,14 @@ layout: default
 
 
     <section>
+
       <h1>Anonymized Synthetic Data Generation by DP-GAN</h1>
-<h3> Overview:</h3> <b>In this post, I aim to briefly review Differntial Privacy Generative Adversarial Network (DP-GAN) as a generative model to synthesize anonymous data samples.</b>
+<b> Overview: In this post, I aim to briefly review Differntial Privacy Generative Adversarial Network (DP-GAN) as a generative model to synthesize anonymous data samples.</b>
+
+<figure>
 <img width="100" height="100" style="vertical-align:middle" src="/Blogs/icon_image.jpg"/>
+</figure>
+
 
   <h2> Why to generate synthetic data?</h2>
   
@@ -17,7 +22,7 @@ However, these datasets can not be shared simply since such datasets usually con
 Therefore, before sharing these sensitive data with the third-party research institutions, the holders of these datasets have to guarantee and preserve the privacy of their customers' information. Data anonymization is one of the ways for preserving data privacy as it aims to make de-identification attacks very hard or preferably impossible. In meantime, the anonymized data should preserve the statistical properties and the patterns existed in the original but unprotected data in order to allows the machine learning techniques to extract and learn these patterns for a variety of tasks, such as predictive models. This leads us to a dilemma; <b>privacy v.s. utility</b>.
 </p>
 
-<img ></img>
+
 
 <p>
 
