--- a/Blogs/Data_anonymization_privacy.html
+++ b/Blogs/Data_anonymization_privacy.html
@@ -23,13 +23,12 @@ Therefore, before sharing these sensitive data with the third-party research ins
 </p>
 
 
-
 <p>
 
 To address both these criteria (privacy v.s. utility), one requires to devise a method to generate <b>synthetic anonymized data</b> that I) pertains the statistical properties of the original data (measured by a utility metric) while II) preserving the privacy of customers information (which can be quantified by a privacy metric) ().
 <figure>
 
-<img src="Blogs/synthetic_data.png"/>
+<img src="/Blogs/synthetic_data.png"/>
 <figcaption>Data generative model should consider to keep the statistical properties of the original data while preserving the privacy of customers information</figcaption>
 </figure>
 
